fix modal,add scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
     @apply bg-slate-900 text-white relative;
   }
   button {
-    @apply hover:scale-110 transition-all duration-300;
+    @apply hover:scale-105 transition-all duration-300;
   }
   input {
     @apply bg-slate-600 rounded-xl px-4 py-2;
